--- a/package.json
+++ b/package.json
@@ -1,32 +1,60 @@
 {
-    "name": "vscode-kitchen",
-    "displayName": "vscode-kitchen",
-    "description": "",
-    "version": "0.0.1",
-    "publisher": "jirkafajfr",
-    "engines": {
-        "vscode": "^1.0.0"
-    },
-    "categories": [
-        "Other"
-    ],
-    "activationEvents": [
-        "onCommand:extension.sayHello"
-    ],
-    "main": "./out/src/extension",
-    "contributes": {
-        "commands": [{
-            "command": "extension.sayHello",
-            "title": "Hello World"
-        }]
-    },
-    "scripts": {
-        "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
-        "compile": "node ./node_modules/vscode/bin/compile -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install"
-    },
-    "devDependencies": {
-        "typescript": "^1.8.5",
-        "vscode": "^0.11.0"
-    }
+  "name": "vscode-kitchen",
+  "displayName": "vscode-kitchen",
+  "description": "",
+  "version": "0.0.1",
+  "publisher": "jirkafajfr",
+  "engines": {
+    "vscode": "^1.0.0"
+  },
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "onCommand:kitchen.list",
+    "onCommand:kitchen.create",
+    "onCommand:kitchen.destroy"
+  ],
+  "main": "./out/src/extension",
+  "contributes": {
+    "commands": [
+      {
+        "command": "kitchen.converge",
+        "title": "Kitchen: Converge"
+      },
+      {
+        "command": "kitchen.create",
+        "title": "Kitchen: Create"
+      },
+      {
+        "command": "kitchen.destroy",
+        "title": "Kitchen: Destroy"
+      },
+      {
+        "command": "kitchen.list",
+        "title": "Kitchen: List"
+      },
+      {
+        "command": "kitchen.test",
+        "title": "Kitchen: Test"
+      },
+      {
+        "command": "kitchen.verify",
+        "title": "Kitchen: Verify"
+      }
+    ]
+  },
+  "scripts": {
+    "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
+    "compile": "node ./node_modules/vscode/bin/compile -watch -p ./",
+    "postinstall": "node ./node_modules/vscode/bin/install"
+  },
+  "dependencies": {
+    "inversify": "^2.0.0-beta.3",
+    "reflect-metadata": "^0.1.3" 
+  },
+  "devDependencies": {
+    "typescript": "^1.8.5",
+    "vscode": "^0.11.0"
+  }
 }
