- added market metadata - added license - added filter to vsce package

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,4 +1,5 @@
 .vscode/**
+.kitchen/**
 typings/**
 out/test/**
 test/**
@@ -6,4 +7,6 @@ src/**
 **/*.map
 .gitignore
 tsconfig.json
-vsc-extension-quickstart.md
+tslint.json
+.kitchen.yml
+*.vsix
