- strict mode for all files - CommandWrapper is now backed by interface and resolved by IoC - IConfiguration provides CWD for command wrapper

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Test Kitchen support for Visual Studio Code",
   "version": "0.0.1",
   "publisher": "jirkafajfr",
+  "preview": true,
   "engines": {
     "vscode": "^1.0.0"
   },
