--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   },
   "dependencies": {
     "inversify": "^2.0.0-beta.3",
+    "inversify-dts": "^1.0.0",
     "reflect-metadata": "^0.1.3" 
   },
   "devDependencies": {
