--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
   "scripts": {
     "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
     "compile": "node ./node_modules/vscode/bin/compile -watch -p ./",
-    "postinstall": "node ./node_modules/vscode/bin/install"
+    "postinstall": "node ./node_modules/vscode/bin/install",
+    "test": "node ./node_modules/vscode/bin/test"
   },
   "dependencies": {
     "inversify": "^2.0.0-beta.3",
@@ -76,6 +77,8 @@
   "devDependencies": {
     "typescript": "^1.8.5",
     "vscode": "^0.11.0",
-    "tslint": "^3.10.2"
+    "tslint": "^3.10.2",
+    "mock-spawn": "^0.2.6",
+    "typemoq": "^0.1.0"
   }
 }
